[project]
name = "starfish"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "flask==3.0.3",
    "requests==2.31.0",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "yfinance==0.2.40",
    "plotly==5.22.0",
    "multitasking==0.0.11",
    "peewee==3.17.6",
    "beautifulsoup4==4.12.3",
    "lxml==5.2.2",
    "html5lib==1.1",
    "frozendict==2.4.4",
]
